# operations_research

./: .gitignore  CMakeLists.txt  README.md
src/: CMakeLists.txt  main.cpp
src/lab1/task1/: main.cpp
src/lab1/task2/: main.cpp
src/lab2/: main.cpp
src/lab3/task1/: main.cpp
src/lab3/task2/: main.cpp
src/lab4/: main.cpp
src/lab5/task2/: main.cpp
src/lab5/task3/: main.cpp
src/lab6/: main.cpp
src/lab7/: main.cpp  main.py
src/libs/: CMakeLists.txt
src/libs/alg/: CMakeLists.txt  alg.h  fraction.cpp  fraction.hpp
src/libs/alg/lab1/: task1.tpp
src/libs/alg/lab2/: task.tpp
src/libs/alg/lab3/: task.tpp  task1.tpp  task2.tpp
src/libs/alg/lab4/: task2.tpp
src/libs/alg/lab5/: task2.tpp  task3.tpp
test/: CMakeLists.txt
