add_subdirectory(libs)

if (NOT LIBRARY_ONLY)
    add_executable(lab1_task1 lab1/task1/main.cpp)
    add_executable(lab1_task2 lab1/task2/main.cpp)
    add_executable(lab2 lab2/main.cpp)
    add_executable(lab3_task1 lab3/task1/main.cpp)
    add_executable(lab3_task2 lab3/task2/main.cpp)
    add_executable(lab4 lab4/main.cpp)
    add_executable(lab5_task2 lab5/task2/main.cpp)
    
    target_link_libraries(lab1_task1 alg)
    target_link_libraries(lab1_task2 alg)
    target_link_libraries(lab2 alg)
    target_link_libraries(lab3_task1 alg)
    target_link_libraries(lab3_task2 alg)
    target_link_libraries(lab4 alg)
    target_link_libraries(lab5_task2 alg)
endif()